got pictures in and the content box made correctly

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,43 +1,60 @@
 html, body, div, span, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, img, ins, kbd, q, s, samp, small, strike, strong, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td {
-	margin: 0;
-	padding: 0;
-	border: 0;
-	outline: 0;
-	font-size: 100%;
-	vertical-align: baseline;
-	background: transparent;
-}
+  margin: 0;
+  padding: 0;
+  border: 0;
+  outline: 0;
+  font-size: 100%;
+  vertical-align: baseline;
+  background: transparent; }
 
 body {
-	background-color: #f5570f;
-	font-family: Arial;
-	font-size: 200%;
-	color: white;
-}
+  line-height: 1; }
 
-#inside {
-	text-align: center;
-	height: 50%;
-	border: 10px solid #F5796E;
-	padding: 100px;
-	position: absolute;
-	left: 20%;
-	right: 20%;
-	top: 10%;
-	max-width: 100%;
-}
+ol, ul {
+  list-style: none; }
 
-#footer {
-	max-width: 100%;
-	left: 20%;
-	right: 20%;
-	position: absolute;
-	text-align: center;
-	bottom: 0;
-	margin: auto;
+blockquote, q {
+  quotes: none; }
 
+blockquote:before, blockquote:after, q:before, q:after {
+  content: '';
+  content: none; }
 
-}
+table {
+  border-collapse: collapse;
+  border-spacing: 0; }
 
+body {
+  background: linear-gradient(180deg, #a90000, black) no-repeat; }
 
+#filler {
+  color: black;
+  font-family: "Trebuchet MS";
+  font-size: 2.8vh; }
 
+#date {
+  z-index: 1;
+  position: absolute;
+  font-size: 1.7vh;
+  left: 6%;
+  top: 30%;
+  transform: translate(0, -50%); }
+
+#container {
+  margin-bottom: 5%;
+  margin-right: 5%;
+  margin-top: 5%;
+  margin-left: 5%;
+  color: black;
+  position: relative;
+  max-width: 100%;
+  padding-top: 20%;
+  padding-left: 7%;
+  padding-bottom: 7%;
+  padding-right: 7%;
+  height: 100%;
+  width: 100%;
+  border: solid 5px black;
+  background-color: white; }
+
+/*# sourceMappingURL=styles.css.map */
