--- a/css/styles.scss
+++ b/css/styles.scss
@@ -5,21 +5,18 @@ body {
 
 }
 
-#filler {
+#text {
   color: black;
   font-family: "Trebuchet MS";
-  font-size: 2.8vh;
-
 }
 
 
 #date {
+  float: left;
   z-index: 1;
-  position: absolute;
+  position: relative;
   font-size: 1.7vh ;
-  left: 6%;
-  top: 30%;
-  transform: translate(0, -50%) ;
+
 }
 
 #container {
@@ -30,13 +27,13 @@ body {
   color: black;
   position: relative;
   max-width: 100%;
-  padding-top: 20%;
-  padding-left: 7%;
-  padding-bottom: 7%;
-  padding-right: 7%;
-
+  padding-top: 3%;
+  padding-left: 3%;
+  padding-bottom: 3%;
+  padding-right: 3%;
+  font-size: 2.8vh;
   height: 100%;
-  width: 100%;
+  width: 83%;
   border: solid 5px black;
   background-color: white;
 }
